--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         <activity android:name=".homeScreen"></activity>
         <activity android:name=".Registration"></activity>
         <activity android:name=".getInfo"></activity>
+        <activity android:name=".Profile"></activity>
+        <activity android:name=".Activities"></activity>
+        <activity android:name=".Stats"></activity>
+        <activity android:name=".Leaderboard"></activity>
         <activity android:name=".loginScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
