--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.learntodroid.switchingbetweenactivities">
+    package="com.learntodroid.Fusion_fitness">
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
@@ -8,18 +8,17 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Fusion Fitness"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".homeScreen"></activity>
-        <activity android:name=".Registration"></activity>
-        <activity android:name=".getInfo"></activity>
-        <activity android:name=".Profile"></activity>
-        <activity android:name=".Activities"></activity>
-        <activity android:name=".Stats"></activity>
-        <activity android:name=".Leaderboard"></activity>
-        <activity android:name=".loginScreen">
+        <activity android:name="com.learntodroid.Fusion_fitness.Activities"></activity>
+        <activity android:name="com.learntodroid.Fusion_fitness.Registration"></activity>
+        <activity android:name="com.learntodroid.Fusion_fitness.getInfo"></activity>
+        <activity android:name="com.learntodroid.Fusion_fitness.Profile"></activity>
+        <activity android:name="com.learntodroid.Fusion_fitness.Stats"></activity>
+        <activity android:name="com.learntodroid.Fusion_fitness.Leaderboard"></activity>
+        <activity android:name="com.learntodroid.Fusion_fitness.loginScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
